@@ -1,3 +1,7 @@
+Travel::Status::DE::IRIS 2.02 - Fri Feb 06 2026
+
+    * Update station database
+
 Travel::Status::DE::IRIS 2.01 - Sat Dec 20 2025
 
     * Update DB InfraGO delay / QoS codes
